force-app/main/default/objects/Project__c/fields/Completed_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Completed_Milestones__c</fullName>
    <label>Completed Milestones</label>
    <summarizedField>Milestone__c.Progress__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>