force-app/main/default/objects/Project__c/fields/Sum_of_All_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_All_Milestones__c</fullName>
    <label>Sum of All Milestones</label>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>